# IP-MS_Pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: example_config.yaml
ipms/: __init__.py  _init.py  analysis.py  normalization.py  prep.py  qc.py  statistics.py  string_ip.py  utils.py  venn_ip.py  visualization.py
notebooks/: 01_test_prep.ipynb  04_test_stat.ipynb  05_test_viz_final.ipynb  06_test_venn_final.ipynb  07_test_boxplot_final.ipynb  AS3MT_IPMS_Pipeline_Test.ipynb
notebooks/old notebookds (consider deleting) /: 00_test_setup.ipynb  01_test_prep.ipynb  02_test_qc_with_drop.ipynb  03_test_norm.ipynb
tests/: conftest.py  test_normalization.py  test_prep.py  test_statistics.py  test_utils.py
